Revert "try adding a z-index to address predictive text issue"
This reverts commit 783754bed997a9ed6bca0e64a50684b783871178.

--- a/src/components/Mission.scss
+++ b/src/components/Mission.scss
@@ -13,7 +13,6 @@
       content: "";
       height: 1em;
       display: block;
-      z-index: 1;
     }
 
     .addSpaceRight {
